--- a/package.json
+++ b/package.json
@@ -3,8 +3,11 @@
   "version": "0.0.1",
   "private": true,
   "author": "srcclr <hello@srcclr.com>",
-  "description": "A node project to demostrate srcclr agent's vulnerable methods for JavaScript",
+  "description": "A node project to demonstrate srcclr agent's vulnerable methods for JavaScript",
   "main": "index.js",
+  "scripts": {
+    "test": "mocha"
+  },
   "dependencies": {
     "algo-httpserv": "1.1.1",
     "js-yaml": "3.13.0",
@@ -17,5 +20,8 @@
     "semver": "5.7.1",
     "to": "0.2.9",
     "url": "0.11.0"
+  },
+  "devDependencies": {
+    "mocha": "^7.0.1"
   }
 }
